feat(snippets): add ned snippets
Add snippets for `ned-mode`.

--- a/README.org
+++ b/README.org
@@ -89,7 +89,7 @@ If you're interested in contributing, here are the currently missing modes:
 - [ ] faust
 - [ ] html
 - [ ] julia
-- [ ] ned
+- [X] ned
 - [ ] nesc
 - [ ] nsis
 - [ ] nxml
