--- a/README.org
+++ b/README.org
@@ -88,3 +88,4 @@ There's some issues with indentation, specially in the insertion of brackets.
 - [[https://github.com/AndreaCrotti/yasnippet-snippets/graphs/contributors][YASnippet Snippets Contributors]]
 - [[https://github.com/abingham][Austin Bingham]], creator of [[https://github.com/abingham/elm-yasnippets][elm-yasnippets]]
 - [[https://github.com/brownts][Troy Brown]], creator of [[https://github.com/brownts/gpr-yasnippets][gpr-yasnippets]]
+- [[https://github.com/mrkkrp][Mark Karpov]], creator of [[https://github.com/mrkkrp/common-lisp-snippets][common-lisp-snippets]]
