--- a/README.org
+++ b/README.org
@@ -91,3 +91,4 @@ There's some issues with indentation, specially in the insertion of brackets.
 - [[https://github.com/mrkkrp][Mark Karpov]], creator of [[https://github.com/mrkkrp/common-lisp-snippets][common-lisp-snippets]]
 - [[https://github.com/uberkael][Adriano M.]], creator of [[https://github.com/uberkael/awk-yasnippets][awk-yasnippets]]
 - [[https://github.com/magnars][Magnar Sveen]], creator of [[https://github.com/magnars/datomic-snippets][datomic-snippets]]
+- [[https://github.com/jhradilek][Jaromír Hradílek]], maintainer of [[https://github.com/jhradilek/emacs-docbook-snippets][emacs-docbook-snippets]]
