--- a/README.org
+++ b/README.org
@@ -94,3 +94,4 @@ There's some issues with indentation, specially in the insertion of brackets.
 - [[https://github.com/jhradilek][Jaromír Hradílek]], maintainer of [[https://github.com/jhradilek/emacs-docbook-snippets][emacs-docbook-snippets]]
 - [[https://github.com/hisea][Yinghai Zao]], creator of [[https://github.com/hisea/elixir-yasnippets][elixir-yasnippets]]
 - [[https://github.com/toumorokoshi][Yusuke Tsutsumi]], creator of [[https://github.com/toumorokoshi/go-snippets][go-snippets]]
+- [[https://github.com/lukehoersten][Luke Hoersten]], creator of [[https://github.com/haskell/haskell-snippets][haskell-snippets]]
