--- a/README.org
+++ b/README.org
@@ -83,7 +83,7 @@ There's some issues with indentation, specially in the insertion of brackets.
   
 * Acknowledgements
 
-- [[https://github.com/Crandel][Crandel]], for creating [[https://github.com/Crandel/tempel-collection][tempel-collection]]
+- [[https://github.com/Crandel][Crandel]], creator of [[https://github.com/Crandel/tempel-collection][tempel-collection]]
 - [[https://github.com/AndreaCrotti][Andrea Crotti]], maintainer of [[https://github.com/AndreaCrotti/yasnippet-snippets][YASnippet Snippets]]
 - [[https://github.com/AndreaCrotti/yasnippet-snippets/graphs/contributors][YASnippet Snippets Contributors]]
 - [[https://github.com/abingham][Austin Bingham]], creator of [[https://github.com/abingham/elm-yasnippets][elm-yasnippets]]
@@ -97,3 +97,4 @@ There's some issues with indentation, specially in the insertion of brackets.
 - [[https://github.com/lukehoersten][Luke Hoersten]], creator of [[https://github.com/haskell/haskell-snippets][haskell-snippets]]
 - [[https://github.com/nekop][Takayoshi Kimura]], maintainer of [[https://github.com/nekop/yasnippet-java-mode][yasnippet-java-mode]]
 - [[https://github.com/ronco][Ron White]], creator of [[https://github.com/ronco/ember-yasnippets.el][ember-yasnippets]]
+- [[https://github.com/npostavs][Noam Postavsky]], maintainer of [[https://elpa.gnu.org/packages/yasnippet-classic-snippets.html][yasnippet-classic-snippets]]
