--- a/README.org
+++ b/README.org
@@ -99,3 +99,4 @@ There's some issues with indentation, specially in the insertion of brackets.
 - [[https://github.com/ronco][Ron White]], creator of [[https://github.com/ronco/ember-yasnippets.el][ember-yasnippets]]
 - [[https://github.com/npostavs][Noam Postavsky]], maintainer of [[https://elpa.gnu.org/packages/yasnippet-classic-snippets.html][yasnippet-classic-snippets]]
 - [[https://github.com/peterwvj][Peter W. V. Tran-Jørgensen]], creator of [[https://github.com/peterwvj/vdm-mode][vdm-mode]] (and [[https://github.com/peterwvj/vdm-mode/tree/master/snippets/vdm-mode][its snippets]])
+- [[https://github.com/gopar][gopar]], creator of [[https://github.com/gopar/vala-snippets][vala-snippets]]
