feat(mallard.eld): add mallard snippets from emacs-mallard-snippets
Add mallard snippets from
[emacs-mallard-snippets](https://github.com/jhradilek/emacs-mallard-snippets).

--- a/README.org
+++ b/README.org
@@ -101,3 +101,4 @@ There's some issues with indentation, specially in the insertion of brackets.
 - [[https://github.com/peterwvj][Peter W. V. Tran-Jørgensen]], creator of [[https://github.com/peterwvj/vdm-mode][vdm-mode]] (and [[https://github.com/peterwvj/vdm-mode/tree/master/snippets/vdm-mode][its Snippets]])
 - [[https://github.com/gopar][Gopar]], creator of [[https://github.com/gopar/vala-snippets][vala-snippets]]
 - [[https://github.com/ptrv][prtv]], creator of [[https://github.com/ptrv/sclang-snippets][sclang-snippets]]
+- [[https://github.com/jhradilek][Jaromír Hradílek]], creator of [[https://github.com/jhradilek/emacs-mallard-snippets][emacs-mallard-snippets]]
